--- a/css/styles.css
+++ b/css/styles.css
@@ -164,29 +164,23 @@ header .container {
 }
 
 /* main */
-
-.container-hero {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    padding: 192px 474px 291px;
+.hero {
+    padding-top: 192px;
+    padding-bottom: 192px;
     background-color: var(--navyblue);
-    width: 1440px;
-    height: 603px;
-    top: 72px;
 }
+
 .hero-text {
     color: var(--body-bg-color);
     font-weight: 600;
     font-size: 56px;
     line-height: 1.1;
-    margin-bottom: 48px;
+    max-width: 474px;
+    margin: 0 auto;
 }
 
-.visually-hidden { 
-    position: absolute; white-space: nowrap; width: 1px; height: 1px; overflow: hidden; border: 0; padding: 0; clip: rect(0 0 0 0); clip-path: inset(50%); margin: -1px; }
-
 .hero-order {
+    display: block;
     background-color: var(--irish);
     color: var(--button-hero-tc);
     font-weight: 600;
@@ -195,13 +189,16 @@ header .container {
     cursor: pointer;
     border: none;
     padding: 16px 32px;
+    max-width: 635px;
+    margin: 0 auto;
+    margin-top: 48px;
 }
 
 .hero-order:hover,
 .hero-order:focus
 {
     background-color: var(--button-hero-active);
-        color: var(--button-hero-tc);
+    color: var(--button-hero-tc);
 }
 
 .hero-order:active {
@@ -210,6 +207,9 @@ header .container {
 
 
 /* advantages */
+.visually-hidden { 
+    position: absolute; white-space: nowrap; width: 1px; height: 1px; overflow: hidden; border: 0; padding: 0; clip: rect(0 0 0 0); clip-path: inset(50%); margin: -1px; }
+
 
 .advantages-headline {
     color: var(--navyblue);
