--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ header .container {
 .advantages-item {
     display: flex;
     flex-wrap: wrap;
+    gap: 24px;;
 }
 
 
@@ -310,12 +311,17 @@ header .container {
 
 /* portfolio */
 
+.portfolio-style {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
+
 .button-flex {
     display: flex;
     gap: 24px;
     justify-content: center;
-    padding-top: 96px;
-    padding: 72px;
+    margin-bottom: 72px;
+
 }
 
 .filter {
@@ -357,7 +363,7 @@ header .container {
 
 .card-text {
     padding-top: 32px;
-    margin-bottom: 32px;
+    padding -bottom: 32px;
     padding-left: 16px; 
     border-left: 2px solid var(--border-button-shadow);
     border-bottom: 2px solid var(--border-button-shadow);
@@ -374,7 +380,6 @@ header .container {
 }
 
 .portfolio-flex> .card {
-    flex-basis: calc(100% / 3 - 24px);
     margin-left: 24px;
     margin-top: 48px;
 
